# rust_serverless_microservice

./: README.md
week05/: Cargo.toml
week05/openssl-1.1.1l/: Makefile  configdata.pm
week05/src/: main.rs  service.rs
