[package]
name = "week05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
serde_json = "1.0.64"
rusoto_dynamodb = "0.46.0"
rusoto_core = "0.46.0"
tokio = { version = "1", features = ["full"] }
openssl = "0.10.35"
serde_derive = "1.0"
serde = "1.0"